--- a/Homework2_0930.ipynb
+++ b/Homework2_0930.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3117f6ea-03c5-48de-87b5-fc640f2a3d41",
+   "metadata": {},
+   "source": [
+    "![](./assets/multi-neuron-perception-network.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e448b1f9-7b61-4d5e-99df-20c3bbcc937e",
