--- a/[物件導向化] Homework1_20240928-Linear Regression.ipynb
+++ b/[物件導向化] Homework1_20240928-Linear Regression.ipynb
@@ -28,8 +28,7 @@
     "y = [99,86,87,88,111,86,103,87,94,78,77,85,86]\n",
     "\n",
     "plt.scatter(x, y)\n",
-    "plt.show() \n",
-    "\n"
+    "plt.show() "
    ]
   },
   {
@@ -95,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
