--- a/[下次作業]Homework3_Data Preprocessing and Validation.ipynb
+++ b/[下次作業]Homework3_Data Preprocessing and Validation.ipynb
@@ -137,7 +137,7 @@
    "id": "e8dc3a22-20a1-47b6-8a50-a4a4fb2af327",
    "metadata": {},
    "source": [
-    "Step1. Find a Good Way to Reduce the Dimension of each Samples in **Breast Cance Wisconsin Dataset**."
+    "Step1. Find a Good Way to Reduce the Dimension of each Samples in **Breast Cancer Wisconsin Dataset**."
    ]
   },
   {
